[gd_scene load_steps=4 format=3 uid="uid://cy4lefedf1dqo"]

[ext_resource type="Texture2D" uid="uid://c5fu8o4der4we" path="res://assets/sprites/temp_sheets/UI assets pack 2/UI books & more.png" id="1_7kc8y"]
[ext_resource type="Script" uid="uid://vr410hxbggv0" path="res://scenes/ui/unit_details_panel.gd" id="1_blucq"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_51orv"]
texture = ExtResource("1_7kc8y")
texture_margin_left = 5.0
texture_margin_top = 5.0
texture_margin_right = 5.0
texture_margin_bottom = 5.0
region_rect = Rect2(161, 336, 30, 16)

[node name="UnitDetailsPanel" type="Panel"]
custom_minimum_size = Vector2(65, 48)
size_flags_horizontal = 4
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_51orv")
script = ExtResource("1_blucq")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.5
offset_top = -20.5
offset_right = 20.5
offset_bottom = 20.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 2
alignment = 1

[node name="HealthLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "HP 99/99"

[node name="OzLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "OZ 1/99"

[node name="MovementLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "MOVE 5"
